message ProcessState {
  required double timestamp = 1;
  required double delay = 2;
  required double cpu = 3;
  required Memory memory = 4;
  required int32 handles = 5;

  message Memory {
    required double rss = 1;
    required double heapTotal = 2;
    required double heapUsed = 3;
    required double external = 4;
  }
}
